# PaprikaViewer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
paprika-api-patched/src/: api.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  mod.rs  recipes.rs  sync.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/photos/: mod.rs
src/components/: CategorySidebar.tsx  LoginScreen.tsx  MainLayout.tsx  RecipeCard.tsx  RecipeDetailModal.tsx  RecipeGrid.tsx  SearchBar.tsx
src/lib/: tauri.ts
src/styles/: global.css  print.css
src/types/: index.ts
