[package]
name = "paprika-viewer"
version = "0.1.0"
description = "Paprika Recipe Viewer"
authors = []
edition = "2021"

[lib]
name = "paprika_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"

# Paprika API (local patch adds User-Agent: Paprika/3.0 iOS required by server)
paprika-api = { path = "../paprika-api-patched" }

# SQLite - use rusqlite version matching tokio-rusqlite 0.5's requirement (0.30.x)
rusqlite = { version = "0.30", features = ["bundled"] }
tokio-rusqlite = "0.5"

# macOS Keychain
keyring = { version = "3", features = ["apple-native"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }

# HTTP for photo downloads - match paprika-api's reqwest version
reqwest = { version = "0.11", features = ["blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
